Fix the stretch-the-last line bug on pre/other tags. applied only on split paragraphs.

--- a/templates/style.css
+++ b/templates/style.css
@@ -22,12 +22,13 @@ h2,
 h3,
 h4 {
   margin: 2vw 0;
-  padding: 0;  
+  padding: 0;
   padding: 0;
   color: #444;
   width: 100%;
   text-align: center;
   font-weight: 100;
+  line-height: 1.25;
 }
 
 h1,
@@ -42,6 +43,7 @@ h6 {
 img {
   border: 0;
   -ms-interpolation-mode: bicubic;
+  display:block;
 }
 
 a {
@@ -66,6 +68,23 @@ p {
   margin: 0 0 0 0;
 }
 
+p.start-chapter {
+  text-indent: 0;
+  margin:  0 0 0;
+  margin: calc( 3 * 4 * (150vh *(1115/1443))/100 * 7/5) auto 0;
+}
+
+p.start-chapter:first-letter {
+  display: inline-block;
+  margin: 0 1vw 0 0;
+  float: left;
+  font-size: calc( 3 * 4vw ); /* three times normal size */
+  line-height: calc(2 * 4vw * 1.50 * 0.95);
+  font-family: 'Berkshire Swash', cursive;
+  /* background: yellow; */     /* Test what looks good on your book */
+}
+
+
 blockquote {
   text-align: center;
   font-size: 90%;
@@ -87,8 +106,18 @@ code {
   white-space: -pre-wrap;
   white-space: -o-pre-wrap;
   word-wrap: break-word;
-  margin: 0 auto calc( 4 * (150vh *(1115/1443))/100 * 7/5);
-  font-size: 90%;
+/*  margin: 0 auto calc( 4 * (150vh *(1115/1443))/100 * 7/5); */
+  margin: 0;
+  text-align: center;
+  font-family: 'EB Garamond', serif;
+  font-style: normal;
+  font-synthesis: none;
+  font-stretch: ultra-condensed;
+  font-variant: no-common-ligatures proportional-nums slashed-zero;
+  font-size: 4vw;
+  line-height: calc(4vw * 1.50);
+  font-kerning: normal;
+  text-rendering: geometricPrecision;
 }
 
 h3 {
@@ -117,9 +146,7 @@ ol li::before {
   padding: 0.3vw 0.8vw 0.3vw 0;
 }
 
-ol li.split-li {
-
-}
+ol li.split-li {}
 
 ol li.split-li::before {
   content: '';
@@ -141,7 +168,6 @@ ul li {
   padding: 0;
 }
 
-
 hr.section {
   border: 0;
   text-align: center;
@@ -155,7 +181,7 @@ hr.section::after {
 }
 
 hr.section::before {
-  content: "❉";
+  content: "❦";
   color: black;
 }
 
@@ -172,7 +198,7 @@ hr.chapter::after {
 }
 
 hr.chapter::before {
-  content: "❧";
+  content: "❦";
   color: black;
 }
 
@@ -194,7 +220,6 @@ hr::before {
 }
 
 
-
 /* Page specific wrapper classes. */
 
 .leaf {
@@ -210,7 +235,7 @@ hr::before {
   width: 85vw;
   max-height: calc(17 * (4vw * 1.5) + 4vw);
   break-after: right;
-  /*background: aliceblue; */
+  /*background: aliceblue; */ /* enable to see the maximum staging area */
 }
 
 .flex {
@@ -226,25 +251,29 @@ hr::before {
 
 
 /* Helper classes */
-.no-indent {
-  text-indent: 0; /* Continue line on a new page with break on the previous page. */
+
+p.no-indent {
+  text-indent: 0;
+  /* Continue line on a new page with break on the previous page. */
 }
 
-.stretch-last-line {
-  text-align-last: justify; /* Not supported on Safari */
+p.stretch-last-line {
+  text-align-last: justify;
+  /* Not supported on Safari */
 }
 
-.squeeze-para {
-  letter-spacing: -0.5px; /* Handle orphans and widows manually */
+p.squeeze-para {
+  letter-spacing: -0.5px;
+  /* Handle orphans and widows manually */
 }
 
-.stretch-para {
-  letter-spacing: 0.5px; /* Handle orphans and widows manually */
+p.stretch-para {
+  letter-spacing: 0.5px;
+  /* Handle orphans and widows manually */
 }
-
 
 .uppercase {
-  text-transform: uppercase; 
+  text-transform: uppercase;
 }
 
 .pad-vertically {
